Websocket aware timeout configuration, a bit of documentation

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -11,17 +11,16 @@ resolvers docker
   nameserver dns "${DNS_TCP_ADDR}:${DNS_TCP_PORT}"
 
 defaults
-    log         global
-    mode        http
-    option      dontlognull
-    option      forwardfor
-    option      httpclose
-    option      httplog
-    retries     3
-    timeout     check    5s
-    timeout     client   5s
-    timeout     connect  10s
-    timeout     server   10s
+  log     global
+  mode    http
+  option  dontlognull
+  option  forwardfor
+  retries 3
+  timeout check    5s
+  timeout connect  5s
+  timeout client   50s
+  timeout server   50s
+  timeout tunnel   0
 
 frontend router
   bind   *:80
@@ -29,16 +28,26 @@ frontend router
   option http-server-close
   option forceclose
 
+  stats enable
+  stats hide-version
+  stats realm   Haproxy\ Statistics
+  stats uri /haproxy?stats
+
   acl acl_api hdr_end(host) -i api.gear-list.com
   acl acl_original hdr_end(host) -i original.gear-list.com
+  acl acl_browser_sync hdr_end(host) -i browser-sync.gear-list.com
 
   use_backend backend_api if acl_api
   use_backend backend_original if acl_original
+  use_backend backend_browser_sync if acl_browser_sync
 
   default_backend backend_browser_client
 
 backend backend_browser_client
   server browser_client gearlist_browser_client_1:3000 check resolvers docker resolve-prefer ipv4
+
+backend backend_browser_sync
+  server browser_sync gearlist_browser_client_1:3001 check resolvers docker resolve-prefer ipv4
 
 backend backend_api
   server api gearlist_api_1:3000 check resolvers docker resolve-prefer ipv4
